# python-project-50

./: .gitignore  Makefile  README.md  pyci.yml  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  pyci.yml
gendiff/: __init__.py  cli.py  diff.py  gendiff.py  io_utils.py  views.py
gendiff/core/: __init__.py  gendiff.py
gendiff/formatters/: __init__.py  stylish.py
gendiff/io/: __init__.py
gendiff/scripts/: diff.py  gendiff.py
gendiff/views/: __init__.py  json_format.py  plain.py
tests/: test_cli.py  test_diff.py  test_gendiff.py  test_io_utils.py  test_utils.py
tests/test_data/: test_result_json.txt  test_result_json1.txt
