[project]
name = "hexlet-code"
version = "0.1.0"
description = "Difference Calculator"
authors = [
    { name = "Kirill", email = "zlobinovk@yandex.ru" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]
